# research-repo-agent

./: .gitignore  README.md  README.zh-CN.md  program.md  pyproject.toml  requirements.txt
autoresearch/: __init__.py  cli.py  io.py  orchestrator.py
autoresearch/agents/: __init__.py  audit.py  direction.py  experiment.py  literature.py  obsidian.py  ranking.py  review.py
autoresearch/schemas/: __init__.py  models.py
docs/: agent_write_review_protocol.md  architecture.md  autoresearch_loop.md  experiment_log_spec.md  json_artifact_contract.md  obsidian_vault_spec.md  project_outline_template.md  reusable_research_workflow.md  workflow.md  xiaomi_token_plan_answer.md
examples/: AI_Paper_Evaluation_Protocol.md  demo_repo_manifest.txt  demo_reproduce_report.md  hneurons_evaluation.json
schemas/: experiment_log.schema.json  experiment_task.schema.json  paper_audit.schema.json  paper_candidate.schema.json  paper_priority_list.schema.json  research_brief.schema.json  review_record.schema.json  run_record.schema.json
scripts/: run_demo.sh
src/research_repro_agent/: __init__.py  cli.py  models.py  paper_agent.py  planner_agent.py  repo_agent.py  report.py
