[project]
name = "research-repro-agent"
version = "0.1.0"
description = "A lightweight multi-agent MVP for paper evaluation and research code reproduction planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
research-repro-agent = "research_repro_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
